@@ -1,5 +1,7 @@
-/* Copyright (C) 2000 Free Software Foundation, Inc.
+/* Bounded-pointer checking macros for C.
+   Copyright (C) 2000 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
+   Contributed by Greg McGary <greg@mcgary.org>
 
    The GNU C Library is free software; you can redistribute it and/or
    modify it under the terms of the GNU Library General Public License as
