@@ -1,3 +1,11 @@
+2000-09-14  Greg McGary  <greg@mcgary.org>
+
+	* bp-checks.h: Remove bogus reference to GNU MP in copyright notice.
+	* bp-semctl.h: Likewise.
+	* bp-start.h: Likewise.
+	* bp-sym.h: Likewise.
+	* bp-thunks.h: Likewise.  Include <stdio.h> to get rename prototype.
+
 2000-09-13  Ulrich Drepper  <drepper@redhat.com>
 
 	* io/test-lfs.c (do_test): Allow stat64() to return EOVERFLOW and
